Finalize production polish and Azure prep